--- a/landing.html
+++ b/landing.html
@@ -25,7 +25,7 @@
 
 <button onclick="location.href='file:///Users/audylebovitz/Desktop/YorGut/plate.html';"> SKIP </button>
 
-<button> cool </button>
+<button> fat </button>
 </body>
 
 </html>
