--- a/landing.html
+++ b/landing.html
@@ -23,9 +23,8 @@
 
 <br>
 
-<button onclick="location.href='file:///Users/audylebovitz/Desktop/YorGut/plate.html';"> SKIP </button>
+<button onclick="location.href='https://coolkid2119.github.io/Microbiome/plate.html';"> SKIP </button>
 
-<button> bet </button>
 </body>
 
 </html>
