--- a/plate.html
+++ b/plate.html
@@ -1,1 +1,9 @@
-cool
+Plate
+
+<button onclick="location.href='https://coolkid2119.github.io/Microbiome/foodsearch.html';"> + </button>
+
+<button onclick="location.href='https://coolkid2119.github.io/Microbiome/analysis.html';"> A </button>
+
+Your plate is empty.
+
+<img src="https://lh3.googleusercontent.com/proxy/9e0W0rLaxlQsB0DFzD9gLuvQoHp_I2A4DGpTwIP2Ff523SR1w64a3syG0h7D50y1QTONBqidJ2LMC_XFgjRua_oGGg">
