--- a/foodsearch.html
+++ b/foodsearch.html
@@ -1,1 +1,15 @@
-foodsearch
+Food Search
+
+<input type="text">
+
+Food Groups
+
+<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Fruits1.jpg">
+
+<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Vegetables1.jpg">
+
+<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Grains1.jpg">
+
+<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Protein1.jpg">
+
+<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Dairy1.jpg">
