--- a/landing.html
+++ b/landing.html
@@ -16,14 +16,14 @@
 
 <button onclick=showVideo()> WATCH DEMO </button>
 
-<video id="video" controls>
+<video id="video">
   <source src="demo.mp4" type="video/mp4">
 
 </video>
 
 <br>
 
-<button onclick="location.href='https://coolkid2119.github.io/Microbiome/plate.html';"> SKIP </button>
+<button onclick="location.href='file:///Users/audylebovitz/Desktop/Microbiome/plate.html';"> SKIP </button>
 
 </body>
 
