--- a/foodsearch.html
+++ b/foodsearch.html
@@ -1,15 +1,27 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="css/foodsearch.css">
+    <script src="https://use.fontawesome.com/3fc8bf9443.js"></script>
+</head>
+
 Food Search
 
-<input type="text">
+<div class="search">
+
+	<span class="fa fa-search"></span>
+	<input type="text">
+	<span class="fa fa-times"></span>
+</div>
 
 Food Groups
 
-<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Fruits1.jpg">
-
-<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Vegetables1.jpg">
-
-<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Grains1.jpg">
-
-<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Protein1.jpg">
-
-<img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Dairy1.jpg">
+<div id="table">
+<table>
+	<tr>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Fruits1.jpg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Vegetables1.jpg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Grains1.jpg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Protein1.jpg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Dairy1.jpg"> </td>
+	</tr>
+</table>
+</div>
