--- a/landing.html
+++ b/landing.html
@@ -23,7 +23,7 @@
 
 <br>
 
-<button onclick="location.href='file:///Users/audylebovitz/Desktop/Microbiome/plate.html';"> SKIP </button>
+<button onclick=toPlate()> SKIP </button>
 
 </body>
 
