--- a/plate.html
+++ b/plate.html
@@ -1,9 +1,14 @@
+<head>
+    <script src="https://use.fontawesome.com/3fc8bf9443.js"></script>
+    <script src="js/plate.js"> </script>
+</head>
+
 Plate
 
-<button onclick="location.href='https://coolkid2119.github.io/Microbiome/foodsearch.html';"> + </button>
+<span class="fa fa-plus" onclick=toSearch()></span>
 
-<button onclick="location.href='https://coolkid2119.github.io/Microbiome/analysis.html';"> A </button>
+<span class="fa fa-bar-chart" onclick=toAnalysis()></span>
 
 Your plate is empty.
 
-<img src="https://lh3.googleusercontent.com/proxy/9e0W0rLaxlQsB0DFzD9gLuvQoHp_I2A4DGpTwIP2Ff523SR1w64a3syG0h7D50y1QTONBqidJ2LMC_XFgjRua_oGGg">
+<img src="https://cdn.clipart.email/ea3acceb9f6c812ea71e98456b0c7c64_dinner-plate-clipart-3-clipart-station_494-347.jpeg">
