--- a/foodsearch.html
+++ b/foodsearch.html
@@ -8,7 +8,10 @@ Food Search
 <div class="search">
 
 	<span class="fa fa-search"></span>
-	<input type="text">
+	<span class="typing">
+		<span class="fruits"> Fruits </span>
+		<input type="text">
+	</span>
 	<span class="fa fa-times"></span>
 </div>
 
@@ -17,11 +20,11 @@ Food Groups
 <div id="table">
 <table>
 	<tr>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Fruits1.jpg"> </td>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Vegetables1.jpg"> </td>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Grains1.jpg"> </td>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Protein1.jpg"> </td>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Dairy1.jpg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Fruits1.jpg" class="fgimg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Vegetables1.jpg" class="fgimg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Grains1.jpg" class="fgimg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Protein1.jpg" class="fgimg"> </td>
+		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Dairy1.jpg" class="fgimg"> </td>
 	</tr>
 </table>
 </div>
