--- a/foodsearch.html
+++ b/foodsearch.html
@@ -18,7 +18,7 @@ Food Search
 		<input type="text" placeholder="Enter food item" class="textbox" onfocus=bet()>
 	</span>
 
-	<span class="fa fa-times"></span>
+	<span class="fa fa-times-circle" style="display:none;"></span>
 
 </div>
 
