--- a/foodsearch.html
+++ b/foodsearch.html
@@ -4,6 +4,8 @@
     <script src="https://use.fontawesome.com/3fc8bf9443.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/foodsearch.js"></script>
+
+    <meta name="viewport" content="user-scalable=no">
 </head>
 
 Food Search
@@ -12,11 +14,10 @@ Food Search
 
 <div class="search">
 
-	<span class="fa fa-search"></span>
+	<span class="fa fa-search"> </span>
 
-	<span class="typing">
-		<input type="text" placeholder="Enter food item" class="textbox" onfocus=bet()>
-	</span>
+	<input class="form-control" id="SearchString" type="text" placeholder="Enter food item" >
+
 
 	<span class="fa fa-times-circle" style="display:none;"></span>
 
@@ -36,23 +37,13 @@ Food Groups
 </table>
 </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-<link href="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.css" rel="stylesheet" />
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+
+<!-- <link href="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.css" rel="stylesheet" />  -->
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+
     <script src="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
     
-    
-   <input class="form-control" id="SearchString" name="SearchString" type="text" value="">
-
-<div class="checkbox">
-  <label><input id="chk1" type="checkbox" value="ingredient1">ingredient 1</label>
-</div>
-<div class="checkbox">
-  <label><input id="chk2" type="checkbox" value="ingredient2">ingredient 2</label>
-</div>
-<div class="checkbox disabled">
-  <label><input id="chk3" type="checkbox" value="ingredient3">ingredient 3</label>
-</div>
+    <input id='myTextbox1' type='text' >
