--- a/foodsearch.html
+++ b/foodsearch.html
@@ -19,7 +19,7 @@ Food Search
 	<input class="form-control" id="SearchString" type="text" placeholder="Enter food item" >
 
 
-	<span class="fa fa-times-circle" style="display:none;"></span>
+	<span class="fa fa-times-circle" style="display:none; float: right;"></span>
 
 </div>
 
