--- a/foodsearch.html
+++ b/foodsearch.html
@@ -14,12 +14,12 @@ Food Search
 
 <div class="search">
 
-	<span class="fa fa-search"> </span>
+	<span class="fa fa-search" style="background: #E1E1E1; color: #999;"> </span>
 
-	<input class="form-control" id="SearchString" type="text" placeholder="Enter food item" >
+	<input class="form-control" id="SearchString" type="text" placeholder="Enter food item">
 
 
-	<span class="fa fa-times-circle" style="display:none; float: right;"></span>
+	<span class="fa fa-times-circle" style="display:none; float: right; background: #E1E1E1;"></span>
 
 </div>
 
