--- a/foodsearch.html
+++ b/foodsearch.html
@@ -14,7 +14,7 @@
 
 <div class="search">
 
-	<span class="fa fa-search" style="background: #E1E1E1; color: #999;"> </span>
+	<!-- <span class="fa fa-search" style="background: #E1E1E1; color: #999;"> </span> -->
 
 	<input class="form-control" id="SearchString" type="text" placeholder="Enter food item">
 
@@ -45,5 +45,3 @@ Food Groups
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 
     <script src="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
-    
-    <input id='myTextbox1' type='text' >
