--- a/foodsearch.html
+++ b/foodsearch.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+
+<html>
+
 <head>
     <link rel="stylesheet" type="text/css" href="css/foodsearch.css">
 
@@ -6,24 +10,33 @@
     <script src="js/foodsearch.js"></script>
 
     <meta name="viewport" content="user-scalable=no">
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+
+    <script src="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
 </head>
+
+<div class="titlesearch">
 
 <span class="title"> Food Search </span>
 
-<hr>
-
 <div class="search">
 
-	<!-- <span class="fa fa-search" style="background: #E1E1E1; color: #999;"> </span> -->
+	<span class="fa fa-search" style="background: #E1E1E1; color: #999;"> </span>
 
 	<input class="form-control" id="SearchString" type="text" placeholder="Enter food item">
 
 
 	<span class="fa fa-times-circle" style="display:none; float: right; background: #E1E1E1;"></span>
+</div>
 
 </div>
 
-Food Groups
+<div class="line"> </div>
+
+<div class="foodgroups">
+
+<span class="category"> Food Groups </span>
 
 <div id="table">
 <table>
@@ -37,11 +50,14 @@ Food Groups
 </table>
 </div>
 
+</div>
+
+
+
 
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 
 <!-- <link href="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.css" rel="stylesheet" />  -->
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 
-    <script src="https://cdn.jsdelivr.net/bootstrap.tagsinput/0.8.0/bootstrap-tagsinput.min.js"></script>
+</html>
