--- a/foodsearch.html
+++ b/foodsearch.html
@@ -34,23 +34,23 @@
 
 <div class="line"> </div>
 
-<div class="foodgroups">
+<!-- <div class="foodgroups"> -->
 
 <span class="category"> Food Groups </span>
 
 <div id="table">
 <table>
 	<tr>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Fruits1.jpg" class="fgimg" value="Fruits"> </td>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Vegetables1.jpg" class="fgimg" value="Vegetables"> </td>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Grains1.jpg" class="fgimg" value="Grains"> </td>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Protein1.jpg" class="fgimg" value="Protein"> </td>
-		<td> <img src="https://choosemyplate-prod.azureedge.net/sites/default/files/printablematerials/Button_Dairy1.jpg" class="fgimg" value="Dairy"> </td>
+		<td style="padding:0 15px 0 0;"> <img src="fruits.png" class="fgimg" value="Fruits"> </td>
+		<td style="padding:0 15px 0 15px;"> <img src="vegetables.png" class="fgimg" value="Vegetables"> </td>
+		<td style="padding:0 15px 0 15px;"> <img src="grains.png" class="fgimg" value="Grains"> </td>
+		<td style="padding:0 15px 0 15px;"> <img src="protein.png" class="fgimg" value="Protein"> </td>
+		<td style="padding:0 0 0 15px;"> <img src="dairy.png" class="fgimg" value="Dairy"> </td>
 	</tr>
 </table>
 </div>
 
-</div>
+<!-- </div> -->
 
 
 
