--- a/foodsearch.html
+++ b/foodsearch.html
@@ -22,12 +22,12 @@
 
 <div class="search">
 
-	<span class="fa fa-search" style="background: #E1E1E1; color: #999;"> </span>
+	<i class="fa fa-search" style="background: #E1E1E1; color: #999; padding: 0;"></i>
 
 	<input class="form-control" id="SearchString" type="text" placeholder="Enter food item">
 
 
-	<span class="fa fa-times-circle" style="display:none; float: right; background: #E1E1E1;"></span>
+	<!-- <span class="fa fa-times-circle" style="display:none; float: right; background: #E1E1E1;"></span> -->
 </div>
 
 </div>
