--- a/foodsearch.html
+++ b/foodsearch.html
@@ -22,9 +22,9 @@
 
 <div class="search">
 
-	<i class="fa fa-search" style="background: #E1E1E1; color: #999; padding: 0;"></i>
+	<i class="fa fa-search" style="background: #E1E1E1; color: #999; margin: 0 !important; padding: 0 !important;"></i><!--
 
-	<input class="form-control" id="SearchString" type="text" placeholder="Enter food item">
+	--><input class="form-control" id="SearchString" type="text" placeholder="Enter food item">
 
 
 	<!-- <span class="fa fa-times-circle" style="display:none; float: right; background: #E1E1E1;"></span> -->
