--- a/foodsearch.html
+++ b/foodsearch.html
@@ -45,7 +45,7 @@
 		<td style="padding:0 15px 0 15px;"> <img src="vegetables.png" class="fgimg" value="Vegetables"> </td>
 		<td style="padding:0 15px 0 15px;"> <img src="grains.png" class="fgimg" value="Grains"> </td>
 		<td style="padding:0 15px 0 15px;"> <img src="protein.png" class="fgimg" value="Protein"> </td>
-		<td style="padding:0 0 0 15px;"> <img src="dairy.png" class="fgimg" value="Dairy"> </td>
+		<td style="padding:0 15px 0 15px;"> <img src="dairy.png" class="fgimg" value="Dairy"> </td>
 	</tr>
 </table>
 </div>
