--- a/foodsearch.html
+++ b/foodsearch.html
@@ -41,7 +41,7 @@
 <div id="table">
 <table>
 	<tr>
-		<td style="padding:0 15px 0 0;"> <img src="fruits.png" class="fgimg" value="Fruits"> </td>
+		<td style="padding:0 15px 0 0;"> <img src="fruits.png" class="fgimg" value="Fruits" > </td>
 		<td style="padding:0 15px 0 15px;"> <img src="vegetables.png" class="fgimg" value="Vegetables"> </td>
 		<td style="padding:0 15px 0 15px;"> <img src="grains.png" class="fgimg" value="Grains"> </td>
 		<td style="padding:0 15px 0 15px;"> <img src="protein.png" class="fgimg" value="Protein"> </td>
@@ -51,6 +51,8 @@
 </div>
 
 <!-- </div> -->
+
+bet
 
 
 
