--- a/foodsearch.html
+++ b/foodsearch.html
@@ -26,9 +26,10 @@
 
 	--><input class="form-control" id="SearchString" type="text" placeholder="Enter food item">
 
-
 	<!-- <span class="fa fa-times-circle" style="display:none; float: right; background: #E1E1E1;"></span> -->
 </div>
+
+ <!-- <button class="cancel" style="display: none;"> Cancel </button>  --->
 
 </div>
 
@@ -36,9 +37,9 @@
 
 <!-- <div class="foodgroups"> -->
 
-<span class="category"> Food Groups </span>
-
 <div id="table">
+
+<span class="category"> Food Groups </span>
 <table>
 	<tr>
 		<td style="padding:0 15px 0 0;"> <img src="fruits.png" class="fgimg" value="Fruits" > </td>
@@ -53,7 +54,6 @@
 <!-- </div> -->
 
 betr
-
 
 
 
