--- a/foodsearch.html
+++ b/foodsearch.html
@@ -24,12 +24,14 @@
 
 	<i class="fa fa-search" style="background: #E1E1E1; color: #999; margin: 0 !important; padding: 0 !important;"></i><!--
 
-	--><input class="form-control" id="SearchString" type="text" placeholder="Enter food item">
+	--><input class="form-control" id="SearchString" type="text" placeholder="Enter food item"><!--
 
-	<!-- <span class="fa fa-times-circle" style="display:none; float: right; background: #E1E1E1;"></span> -->
-</div>
+	--><span class="parent-circle"> <span class="fa fa-times-circle"></span> </span> <!--
 
- <!-- <button class="cancel" style="display: none;"> Cancel </button>  --->
+--></div><!--
+
+--><span class="cancel"> Cancel </span> 
+
 
 </div>
 
