--- a/foodsearch.html
+++ b/foodsearch.html
@@ -26,11 +26,11 @@
 
 	--><input class="form-control" id="SearchString" type="text" placeholder="Enter food item"><!--
 
-	--><span class="parent-circle"> <span class="fa fa-times-circle"></span> </span> <!--
+	--><span class="parent-circle"> <span class="fa fa-times-circle" onclick=clearText()></span> </span> <!--
 
 --></div><!--
 
---><span class="cancel"> Cancel </span> 
+--><span class="cancel" onclick=search_home()> Cancel </span> 
 
 
 </div>
