--- a/foodsearch.html
+++ b/foodsearch.html
@@ -22,7 +22,7 @@
 
 <div class="search">
 
-	<i class="fa fa-search" style="background: #E1E1E1; color: #999; margin: 0 !important; padding: 0 !important; font-size: 300%;"></i><!--
+	<i class="fa fa-search" style="background: #E1E1E1; color: #999; margin: 0 !important; display: inline-block;"></i><!--
 
 	--><input class="form-control" id="SearchString" type="text" placeholder="Enter food item"><!--
 
