--- a/foodsearch.html
+++ b/foodsearch.html
@@ -22,7 +22,7 @@
 
 <div class="search">
 
-	<i class="fa fa-search" style="background: #E1E1E1; color: #999; margin: 0 !important;"></i><!--
+	<i class="fa fa-search" style="background: #E1E1E1; color: #999; margin: 0 !important; font-size: 100% !important;"></i><!--
 
 	--><input class="form-control" id="SearchString" type="text" placeholder="Enter food item"><!--
 
@@ -54,7 +54,7 @@
 </div>
 
 <!-- </div> -->
-com
+commerce
 
 
 
