--- a/foodsearch.html
+++ b/foodsearch.html
@@ -25,10 +25,14 @@
 
 	<div class="line"> </div>
 
+	<div id="search_results">
+		
+	</div>
 	<div id="table">
 
 		<span class="category"> Food Groups </span>
 
+		<div id="breh">
 		<table>
 			<tr>
 				<td style="padding:0 15px 0 0;"> <img src="fruits.png" class="fgimg" value="Fruits" > </td>
@@ -38,10 +42,9 @@
 				<td style="padding:0 15px 0 15px;"> <img src="dairy.png" class="fgimg" value="Dairy"> </td>
 			</tr>
 		</table>
+		</div>
 
 	</div>
-
-	commercial dang
 
 <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
 
