--- a/foodsearch.html
+++ b/foodsearch.html
@@ -35,11 +35,11 @@
 		<div id="breh">
 		<table>
 			<tr>
-				<td style="padding:0 15px 0 0;"> <img src="fruits.png" class="fgimg" value="Fruits" > </td>
-				<td style="padding:0 15px 0 15px;"> <img src="vegetables.png" class="fgimg" value="Vegetables"> </td>
-				<td style="padding:0 15px 0 15px;"> <img src="grains.png" class="fgimg" value="Grains"> </td>
-				<td style="padding:0 15px 0 15px;"> <img src="protein.png" class="fgimg" value="Protein"> </td>
-				<td style="padding:0 15px 0 15px;"> <img src="dairy.png" class="fgimg" value="Dairy"> </td>
+				<td style="padding:0 15px 0 0;"> <img src="images/fruits.png" class="fgimg" value="Fruits" > </td>
+				<td style="padding:0 15px 0 15px;"> <img src="images/vegetables.png" class="fgimg" value="Vegetables"> </td>
+				<td style="padding:0 15px 0 15px;"> <img src="images/grains.png" class="fgimg" value="Grains"> </td>
+				<td style="padding:0 15px 0 15px;"> <img src="images/protein.png" class="fgimg" value="Protein"> </td>
+				<td style="padding:0 15px 0 15px;"> <img src="images/dairy.png" class="fgimg" value="Dairy"> </td>
 			</tr>
 		</table>
 		</div>
