--- a/landing.html
+++ b/landing.html
@@ -17,7 +17,7 @@
 <button onclick=showVideo()> WATCH DEMO </button>
 
 <video id="video">
-  <source src="demo.mp4" type="video/mp4">
+  <source src="demo.mp4" type="video/mp4" controls>
 
 </video>
 
