--- a/foodsearch.html
+++ b/foodsearch.html
@@ -13,9 +13,9 @@
 		<div class="search">
 
 			<!-- <i class="fa fa-search" style="background: #E1E1E1; color: #999; margin: 0 !important; font-size: 100% !important;"></i> -->
-			<div class="parent-search"> <span class="fa fa-search"></span> </div>
-			<input class="form-control" id="SearchString" type="text" placeholder="Enter food item" style="display: none;">
-			<div class="parent-circle"> <span class="fa fa-times-circle" onclick=clearText()></span> </div>
+			<div class="parent-search"><span class="fa fa-search"></span></div><!--
+			--><input class="form-control" id="SearchString" type="text" placeholder="Enter food item" style="display: none;"><!--
+			--><div class="parent-circle"><span class="fa fa-times-circle" onclick=clearText()></span></div>
 
 		</div><!--
 
